<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/noun_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="start"
            android:onClick="handleClick"
            android:text="@string/noun_btn"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/verb_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="start"
            android:onClick="handleClick"
            android:text="@string/verb_btn"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noun_btn" />

        <Button
            android:id="@+id/adjective_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="start"
            android:onClick="handleClick"
            android:text="@string/adjective_btn"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verb_btn" />

        <Button
            android:id="@+id/adverb_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="start"
            android:onClick="handleClick"
            android:text="@string/adverb_btn"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adjective_btn" />

        <View
            android:id="@+id/divider_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="32dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adverb_btn" />

        <TextView
            android:id="@+id/filter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/filter_text"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_line" />

        <TextView
            android:id="@+id/letter_limit_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/length_filter_text_1"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/numberInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_text" />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/length_filter_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/letter_limit_text_1"
            app:layout_constraintEnd_toStartOf="@+id/letter_limit_text_2"
            app:layout_constraintStart_toEndOf="@+id/letter_limit_text_1" />

        <TextView
            android:id="@+id/letter_limit_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/length_filter_text_2"
            android:textColor="#000000"
            app:layout_constraintBaseline_toBaselineOf="@+id/letter_limit_text_1"
            app:layout_constraintStart_toEndOf="@+id/numberInput" />

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="applyChanges"
            android:text="@string/apply_btn_text"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/filter_text"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>